fixed settings alignment

--- a/public/stylesheets/settings-styles.less
+++ b/public/stylesheets/settings-styles.less
@@ -48,8 +48,16 @@ Wix UI lib component styles
   left: -62px;
 }
 
+.borderGroup .uilib-slider .uilib-slider-preLabel, .cornerGroup .uilib-slider .uilib-slider-preLabel {
+  left: -12px;
+}
+
 .uilib-slider.default-uilib-slider-ui {
   display: inline-block;
+}
+
+.borderSpinner.uilib-spinner.default, .cornerSpinner.uilib-spinner.default {
+    margin-left: 5px;
 }
 
 .width-slider-label {
